# Portfolio

./: README.md  buildspec.yml  pyproject.toml  requirements.txt
.ebextensions/: django.config  set-instance-credit-unlimited.config
blog/: models.py  test_models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_auto_20200916_2229.py  0003_auto_20200930_1502.py
blog/templates/blog/: detail.html  index.html
ebdjango/: settings.py  urls.py  utils.py
helloworld/: urls.py  views.py
helloworld/templates/: index.html
helloworld/templates/helloworld/: index.html
site_base/: apps.py  tests.py  urls.py  views.py
site_base/templates/site_base/: index.html
stocks/: forms.py  models.py  serializers.py  upload_data.py  urls.py  views.py
stocks/migrations/: 0001_initial.py  0002_auto_20210102_1600.py  0002_auto_20210116_1556.py  0003_auto_20210130_1257.py
stocks/templates/stocks/: index.html  upload.html
templates/: base.html
templates/components/: navbar.html
