[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = "My portfolio"
authors = ["Dexter"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "2.1.15"
pylint = "^2.6.0"
psycopg2-binary = "2.8.6"
wheel = "^0.36.2"
django-ckeditor = "6.0.0"
pylint-django = "^2.3.0"
black = "^20.8b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
